--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
